Fix: added webkit-overflow-scrolling: touch

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@ body {
   -webkit-transform: translateZ(0);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
-  /* -webkit-overflow-scrolling: touch; */
+  -webkit-overflow-scrolling: touch;
 }
 
 /* *, *::before, *::after {
